--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,13 @@
 .App {
   text-align: center;
 }
+
+.clone-icon {
+  margin-top: 10px;
+}
+
+@media screen and (max-width: 600px) {
+  .clone-icon {
+    transform: rotate(90deg);
+  }
+}
